--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <title>Portfolio</title>
 </head>
 <body>
-    
+    <h1>About Me</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis voluptates rerum eius placeat distinctio, dignissimos cumque repudiandae doloremque excepturi est quos modi facere ea recusandae ipsa animi ducimus alias iure.</p>
 </body>
 </html>
