--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </div>
                 </div>
                     <div class="content-box">
-                        <h1>I Design & Develop<br>Websites</h1>
+                        <h1>I Design & Developer  <br>Website</h1>
                         <p>I have eight years of hands-on experience efficiently coding websites  using modern HTML, CSS, and JavaScript Building state-of-the-art, easy <br>to use, user-friendly websites, Using the most modern, up-to-date technologies to develop digital solutions for  clients.</p>
                         <img src="/images/code image.jpg" alt="hero image">
                     </div>
