--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <script src="/script.js"></script>
+    <script type="text/JavaScript" src="/script.js"></script>
     <script src="https://kit.fontawesome.com/f668530897.js" crossorigin="anonymous"></script>    
     <link rel="stylesheet" href="style.css">
     <title>My Portfolio</title>
@@ -45,7 +45,7 @@
                     </div>
                     <div class="mobile-menu">
                         <a class="download-btn" href="#">Download CV</a>
-                        <img src="/images/mobile-icon.png" alt="burger-icon">
+                        <img class="mobile-icon" src="/images/mobile-icon.png" alt="burger-icon">
                     </div>
                     <div class="drop-down">
                         <ul>
